# photo-gallery

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
backend/: .env example  .gitignore  Cargo.toml
backend/migrations/: 20240101000000_create_albums.sql  20240102000000_create_images.sql  20240103000000_create_image_metadat.sql
backend/src/: config.rs  main.rs  models.rs  routes.rs
backend/src/db/: album.rs  metadata.rs  mod.rs
backend/src/handlers/: album.rs  auth.rs  metadata.rs  mod.rs
backend/src/utils/: exif_utils.rs  mod.rs
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/album/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/utils/: auth.ts
migrations/: 0001_initial.sql
src/: main.rs  state.rs  types.rs  utils.rs
src/auth/: middleware.rs
src/db/: mod.rs
src/handlers/: admin.rs  album.rs  home.rs  login.rs  mod.rs
templates/: admin.html  album.html  base.html  home.html  login.html
