[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["timeout", "cors", "fs", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1"
bcrypt = "0.16.0"
once_cell = "1.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.22"
dotenv = "0.15"
uuid = { version = "1.11.1", features = ["serde", "v4"] }
axum-extra = "0.10.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
bytes = "1.9.0"
dotenvy = "0.15.7"