[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "cors", "fs", "limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.1"
bcrypt = "0.16"
once_cell = "1.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
uuid = { version = "1.12", features = ["serde", "v4"] }
axum-extra = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
bytes = "1.9"
kamadak-exif = "0.6"
image = "0.25"